--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -4,6 +4,7 @@
     border: 2px solid #0b5ed7;
     padding: 10px 15px;
     box-shadow: 1px 3px 9px rgba(0, 0, 0, 0.344);
+    outline: none;
 }
 .btn{
     box-shadow: 1px 3px 9px rgba(0, 0, 0, 0.344);
