--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
    text-align: center;
 }
-/* .contenedor{
-   background-color: red;
+.active{
+   border-bottom: 3px solid #0b5ed7;
+   font-weight: bold;
+   color: #0b5ed7 !important;
 }
- */
